--- a/面试准备/面试题/九宫格.html
+++ b/面试准备/面试题/九宫格.html
@@ -3,35 +3,48 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>九宫格 </title>
-		<style>
-		  * {
-		    margin: 0;
-		    padding: 0;
-		  }
-		  .wrapper {
-		    width: 900px;
-		    height: 600px;
-		  }
-		  ul {
-		    overflow: hidden;
-		  }
-		  li {
-		    float: left;
-		    width: 300px;
-		    height: 200px;
-		    box-sizing: border-box;
-		    border: 1px solid #FF0000;
-		    list-style: none;
-		    
-		  }
-		  li:hover {
-		    border-color: #0000FF;
-		  }
-		</style>
+		
+	  <style>
+	    
+	  </style>
 	</head>
 	<body>
-	  <div class="wrapper">
-	     <ul>
+	    <style>
+        .wrapper.float {
+          margin: 0;
+          padding: 0;
+        }
+        .wrapper.float {
+          width: 900px;
+          height: 300px;
+        }
+        .wrapper.float ul {
+          overflow: hidden;
+        }
+        .wrapper.float li {
+          float: left;
+          width: 300px;
+          height: 100px;
+          box-sizing: border-box;
+          border: 4px solid #ccc;
+          list-style: none;
+          margin-top: -4px;
+          margin-left: -4px;
+        }
+        /*:nth-of-type(n) 选择器匹配属于父元素的特定类型的第 N 个子元素的每个元素.*/
+        /* 选择器匹配属于其父元素的第 N 个子元素，不论元素的类型。*/
+        .wrapper.float li:nth-child(3n+1) {
+          /*margin-top: 0;*/
+        }
+        .wrapper.float li:nth-child(3n+1) {
+          margin-left: 0;
+        }
+        .wrapper.float li:hover {
+          border-color: #0000FF;
+          z-index: 2;
+        }
+      </style>
+	  <div class="wrapper float">
 	     	<li>1</li>
 	     	<li>2</li>
 	     	<li>3</li>
@@ -41,7 +54,140 @@
 	     	<li>7</li>
 	     	<li>8</li>
 	     	<li>9</li>
-	     </ul>
 	  </div>
+	<br />
+		<div class="wrapper grid">
+      <style>
+        .wrapper.grid {
+          width: 900px;
+          height: 300px;
+          display: grid;
+          grid-template-columns: auto auto auto;
+          grid-template-rows: auto;
+          grid-column-gap: 10px;
+          grid-row-gap: 15px; 
+        }
+        .wrapper.grid li {
+          box-sizing: border-box;
+          background: #FFFF00;
+          list-style: none;
+        }
+        .wrapper.grid li:hover {
+          background: aqua;
+        }
+      </style>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+    </div>
+	<br /> 
+	  <div class="wrapper flex">
+	    <style>
+        .wrapper.flex {
+          width: 900px;
+          height: 300px;
+          display: flex;
+          flex-wrap: wrap;                    /*换行*/
+          justify-content: space-between;     /*项目在主轴上的对齐方式。*/
+          align-items: stretch;               /*项目在交叉轴上如何对齐。*/
+        }
+        .wrapper.flex li {
+          flex: 0 0 280px;                   /*flex-grow:0不放大；  flex-shrink:0不缩小；flex-basis: 宽度;*/
+          height: 90px;
+          box-sizing: border-box;
+          background: #FFFF00;
+          list-style: none;
+        }
+        .wrapper.flex li:hover {
+          background: aqua;
+        }
+      </style>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+	  </div>
+	
+    <div class="wrapper table">
+      <style>
+        .wrapper.table {
+          width: 900px;
+          height: 300px;
+          display: table-row-group;
+        }
+        .wrapper.table li {
+          display: table-cell;
+          width: 30%;
+          height: 90px;
+          background: #FFFF00;
+          list-style: none;
+        }
+        .wrapper.table li:hover {
+          background: aqua;
+        }
+      </style>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+    </div>
+	 
+	 <!--flex布局边框九宫格-->
+    <style>
+      .wrapper.flex2 {
+        width: 300px;
+        height: 300px;
+        display: flex;
+        flex-wrap: wrap;                    /*换行*/
+      }
+      .wrapper.flex2 li {
+        width: calc(308px/3);
+        height: calc(308px/3);
+        box-sizing: border-box;
+        border: 4px solid #ccc;
+        list-style: none;
+        margin-top: -4px;
+        margin-left: -4px;
+      }
+      .wrapper.flex2 li:nth-child(1), 
+      .wrapper.flex2 li:nth-child(2), 
+      .wrapper.flex2 li:nth-child(3) {
+        margin-top: 0;
+      }
+      .wrapper.flex2 li:nth-child(3n+1) {
+        margin-left: 0;
+      }
+      .wrapper.flex2 li:hover {
+        border-color: #f00;
+        z-index: 2;
+      }
+    </style>
+	  <div class="wrapper flex2">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+    </div>
 	</body>
 </html>
