页面布局css盒模型

--- a/面试准备/面试-css、js/3-1三栏.html
+++ b/面试准备/面试-css、js/3-1三栏.html
@@ -191,5 +191,10 @@
         <div class="right"></div>
       </article>
     </section>
+    <script>
+      // 这块我真的不了解，看那些资料我去补？不要 不装装懂 不会装会
+      // 要谦虚
+//    不要把话说的太满
+    </script>
 	</body>
 </html>
