--- a/面试准备/课堂笔记/3-10原型链一.html
+++ b/面试准备/课堂笔记/3-10原型链一.html
@@ -9,7 +9,25 @@
 	  2、原型、构造函数、实例、原型链 是什么？
 	  3、instanceof的原理
 	  4、new运算符
-	
+	<script>
+	  var o1 = {name: '哦'}
+	  new Object({name:""});
+	  
+	  var M = function (name) {
+	  	this.name = name;
+	  }
+	  var o2 = new M('为 ')
+	  qq = {}
+	  new Object({})
+	  
+	  function M (name) {
+	  	this.name = name;
+	  }
+	  new M('wed')
+	  
+	  qq = {}
+	  Object.create(qq)
+	</script>
 	<script> 
 	  答：  1、proto.html
 	  字面量:var o1 = {name:'o1'}; // 原型链指向object
