--- a/面试准备/面试课-css、js/DNS.html
+++ b/面试准备/面试课-css、js/DNS.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<meta http-equiv="x-dns-prefetch-control" content="on"/>
+		<link rel="dns-prefetch" href="//host_name_to_prefetch.com"/>
 	</head>
 	<body>
 	  你发现快要过年了，于是想给你的女朋友买一件毛衣，你打开了www.taobao.com。这时你的浏览器首先查询DNS服务器，将www.taobao.com转换成ip地址。
-	  不过首先你会发现，你在不同的地区或者不同的网络（电信、联通、移动）的情况下，转换后的ip地址很可能是不一样的，这首先涉及到负载均衡的第一步，
+	     不过首先你会发现，你在不同的地区或者不同的网络（电信、联通、移动）的情况下，转换后的ip地址很可能是不一样的，这首先涉及到负载均衡的第一步，
 	  通过DNS解析域名时将你的访问分配到不同的入口，同时尽可能保证你所访问的入口是所有入口中可能较快的一个(这和后文的CDN不一样)。
 
 你通过这个入口成功的访问了www.taobao.com的实际的入口ip地址。这时你产生了一个PV，即Page View，页面访问。
