--- a/面试准备/面试课-css、js/process.html
+++ b/面试准备/面试课-css、js/process.html
@@ -11,7 +11,7 @@
           console.log(i);
 //      }, 1000);
       }
-//    console.log(i)
+//    console.log(i) // 4
 	  </script>
 	</body>
 </html>
